[tool.poetry]
name = "pondpy4tljh"
version = "0.1.0"
description = "Pondpy user interface for use with TLJH"
authors = ["matthew-upshaw <matthew.upshaw02@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipywidgets = "^8.1.3"
pandas = "^2.2.2"
pondpy = "^0.2.3"
notebook = "^7.2.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
